@@ -7,6 +7,9 @@ partman-md (42) UNRELEASED; urgency=low
     (Closes: #391479, #391483, #393728, #398668)
   * Load the necessary modules and scan RAID arrays during partman
     initialization.  (Closes: #391474)
+  * Add device_remove_md() in lib/md-remove.sh: it is necessary to allow
+    proper removal of MD devices when we create a new label on a disk
+    (for example, during automatic partitioning).
 
  -- Jérémy Bobbio <lunar@debian.org>  Thu, 29 May 2008 16:02:39 +0000
 
